bin/tests/snapshots/bool_comparison__lint_c031ce4a7d754ef42071e72da7d6bf4b645ebdaf948399be54f775686a58347b.snap
---
source: bin/tests/bool_comparison.rs
expression: "\"e != true\""
---
[W01] Warning: Unnecessary comparison with boolean
   ╭─[<temp_file_path>:1:1]
   │
 1 │ e != true
   · ────┬────  
   ·     ╰────── Comparing e with boolean literal true
───╯
